# stimuli

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.github/actions/create-soundcard/: action.yaml
.github/actions/install-liblsl/: action.yaml
.github/workflows/: bot.yaml  build.yml  code-style.yml  debug.yml  doc.yaml  doc.yml  publish.yaml  publish.yml  pytest.yaml  pytest.yml  stubs.yaml
_downloads/0d95c47479bb83aaf162357584d36ccd/: 30_apply_a_window.py
_downloads/23dcf1a3cfcdf770fbf9a4983f0a29ed/: 40_sychronize_sound_and_trigger.ipynb
_downloads/5cd9f36d95a835433df7ed54eca518a8/: 30_apply_a_window.ipynb
_downloads/b603a0a351f8dafd8d43fa97b0940fb9/: 20_colored_noise.py
_downloads/d74af7fa5e442c539cd6cf29b1bc5e0a/: 10_base_sounds.ipynb
_downloads/f01b4282b71ffa5d3fa91785b3b43173/: 20_colored_noise.ipynb
_sources/: sg_execution_times.rst.txt
_sources/api/: audio.rst.txt  index.rst.txt  keyboard.rst.txt  time.rst.txt  trigger.rst.txt  utilities.rst.txt
_sources/changes/: 0.1.rst.txt  0.3.rst.txt  0.5.rst.txt  1.0.rst.txt  1.1.rst.txt  1.2.rst.txt  latest.rst.txt
api/: audio.html  index.html  keyboard.html  time.html  trigger.html  utilities.html
changes/: 0.1.html  0.2.html  0.3.html  0.4.html  0.5.html  1.0.html  1.1.html  1.2.html  index.html  latest.html
debug/: test_debug.py
doc/: api.rst  cli.rst  conf.py  index.rst  links.inc  references.bib
doc/api/: audio.rst  index.rst  keyboard.rst  logging.rst  stimuli.audio.rst  stimuli.visuals.feedback.rst  time.rst  triggers.rst
doc/changes/: 0.1.rst  0.2.rst  0.3.rst  0.4.rst  0.5.rst  1.1.rst  1.2.rst  index.rst  latest.inc  latest.rst  latest.rst.template
doc/references/: index.rst  stimuli.audio.rst  stimuli.visuals.basic.rst  stimuli.visuals.rst
doc/sphinxext/: gh_substitutions.py
stimuli/: __init__.py  __init__.pyi  conftest.py  keyboard.py
stimuli/audio/: __init__.py  __init__.pyi  _base.py  _sound.py  _tone.py  am.py  am.pyi  assr.py  base.py  base.pyi  noise.py  noise.pyi  sound.py  sound.pyi  tone.py  tone.pyi  whitenoise.py
stimuli/audio/_backend/: __init__.py  _base.py  sounddevice.py
stimuli/audio/_backend/tests/: test_sounddevice.py
stimuli/audio/backend/: __init__.py  _base.py  sounddevice.py
stimuli/audio/backend/tests/: test_sounddevice.py
stimuli/audio/tests/: test_am.py  test_assr.py  test_base.py  test_noise.py  test_sound.py  test_tone.py  test_whitenoise.py
stimuli/commands/: __init__.py  stimuli_cross.py
stimuli/commands/tests/: test_main.py  test_sys_info.py
stimuli/keyboard/: __init__.py  _keyboard.py  _utils.py
stimuli/keyboard/tests/: test_keyboard.py  test_utils.py
stimuli/time/: __init__.py  _clock.py  _sleep.py  sleep.py
stimuli/time/tests/: test_clock.py  test_sleep.py
stimuli/trigger/: __init__.py  _base.py  lsl.py  mock.py  parallel.py
stimuli/trigger/_io/: _dlportio.py
stimuli/trigger/io/: __init__.py  _dlportio.py  _inpout.py  _linux.py
stimuli/trigger/tests/: test_lsl.py  test_mock.py  test_parallel.py
stimuli/triggers/: __init__.py  _base.py  lsl.py  mock.py  parallel.py
stimuli/triggers/io/: __init__.py  _dlportio.py  _inpout.py  _linux.py
stimuli/triggers/tests/: test_lsl.py  test_mock.py  test_parallel.py
stimuli/utils/: _checks.py  _config.py  _docs.py  _imports.py  _logs.py  config.py  logs.py
stimuli/utils/tests/: __init__.py  test_checks.py  test_config.py  test_docs.py  test_imports.py  test_logs.py
stimuli/visuals/: __init__.py  __init__.pyi  _visual.py  base.py  base.pyi  cross.py  cross.pyi  filling_bar.py  filling_bar.pyi  moving_bar.py  moving_bar.pyi  text.py  text.pyi
stimuli/visuals/tests/: test_base.py  test_cross.py  test_filling_bar.py  test_moving_bar.py  test_text.py
tools/: stubgen.py
tutorials/: 10_base_sounds.py  30_apply_a_window.py  40_sychronize_sound_and_trigger.py
tutorials/audio/: 01_base_sounds.py  02_colored_noise.py  10_base_sounds.py  20_colored_noise.py  30_apply_a_window.py  README.rst
