[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'stimuli'
version = '0.4.2'
description = 'Simple auditory and visual stimuli avoiding PsychoPy.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.8'
authors = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
maintainers = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
keywords = [
    'audio',
    'auditory',
    'python',
    'stimuli',
    'visual',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development',
]
dependencies = [
    'matplotlib',
    'psutil',
    'numpy>=1.21',
    'opencv-python',
    'scipy',
    'screeninfo',
    'sounddevice',
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
doc = [
    'furo',
    'matplotlib',
    'memory-profiler',
    'numpydoc',
    'sphinx',
    'sphinxcontrib-bibtex',
    'sphinx-copybutton',
    'sphinx-design',
    'sphinx-gallery',
    'sphinx-issues',
]
style = [
    'black',
    'codespell',
    'isort',
    'flake8',
    'pydocstyle[toml]',
]
test = [
    'pytest',
    'pytest-cov',
]
all = [
    'stimuli[build]',
    'stimuli[doc]',
    'stimuli[style]',
    'stimuli[test]',
]
full = [
    'stimuli[all]',
]

[project.urls]
homepage = 'https://github.com/mscheltienne/simple-stimuli'
documentation = 'https://github.com/mscheltienne/simple-stimuli'
source = 'https://github.com/mscheltienne/simple-stimuli'
tracker = 'https://github.com/mscheltienne/simple-stimuli/issues'

[project.scripts]
stimuli-sys_info = 'stimuli.commands.sys_info:run'
stimuli_cross = 'stimuli.commands.stimuli_cross:run'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['stimuli*']
exclude = ['stimuli*tests']

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | setup.py
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 79
py_version = 38
extend_skip_glob = [
    'setup.py',
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^stimuli.*'
add_ignore = 'D100,D104,D107'

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/stimuli/_version.py',
    '**/stimuli/commands/*',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
]
precision = 2
