[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering',
  'Topic :: Software Development',
]
dependencies = [
  'matplotlib',
  'numpy>=1.21',
  'opencv-python',
  'packaging',
  'psutil',
  'scipy',
  'screeninfo',
  'sounddevice',
]
description = 'Simple auditory and visual stimuli avoiding PsychoPy.'
keywords = [
  'audio',
  'auditory',
  'python',
  'stimuli',
  'visual',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'stimuli'
readme = 'README.md'
requires-python = '>=3.10'
version = '0.5.0'

[project.optional-dependencies]
all = [
  'stimuli[build]',
  'stimuli[doc]',
  'stimuli[stubs]',
  'stimuli[style]',
  'stimuli[test]',
]
build = [
  'build',
  'twine',
]
doc = [
  'furo',
  'matplotlib',
  'memory-profiler',
  'numpydoc',
  'sphinx',
  'sphinx-copybutton',
  'sphinx-design',
  'sphinx-gallery',
  'sphinx-issues',
  'sphinxcontrib-bibtex',
]
full = [
  'stimuli[all]',
]
stubs = [
  'isort',
  'mypy',
  'ruff>=0.1.8',
]
style = [
  'bibclean',
  'codespell[toml]>=2.2.4',
  'isort',
  'pydocstyle[toml]',
  'ruff>=0.1.8',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest-cov',
  'pytest>=8.0.0',
]

[project.scripts]
stimuli-sys_info = 'stimuli.commands.sys_info:run'
stimuli_cross = 'stimuli.commands.stimuli_cross:run'

[project.urls]
documentation = 'https://mscheltienne.github.io/simple-stimuli/dev/index.html'
homepage = 'https://mscheltienne.github.io/simple-stimuli/dev/index.html'
source = 'https://github.com/mscheltienne/simple-stimuli'
tracker = 'https://github.com/mscheltienne/simple-stimuli/issues'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/conftest.py',
  '**/stimuli/_version.py',
  '**/stimuli/commands/*',
  '**/stimuli/utils/_fixes.py',
  '**/tests/**',
]

[tool.isort]
extend_skip_glob = [
  'setup.py',
  'tutorials/*',
]
line_length = 88
multi_line_output = 3
profile = 'black'
py_version = 310

[tool.pydocstyle]
add_ignore = 'D100,D104,D107'
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^stimuli.*'

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
minversion = '8.0'

[tool.ruff]
extend-exclude = [
  'doc',
  'setup.py',
]
line-length = 88
target-version = 'py310'

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = []
select = ["A", "B", "E", "F", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
'*' = [
  "B904", # 'Within an except clause, raise exceptions with raise ... from ...'
]
'*.pyi' = ['E501']
'__init__.py' = ['F401']

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ['stimuli*tests']
include = ['stimuli*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
